// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spacing component given a valid default theme is provided when a "margin" prop is provided should render correctly 1`] = `
<div
  className="MuiBox-root MuiBox-root-15 NatDSSpacing-root-13 NatDSSpacing-root-14"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "marginBottom" prop is provided should render correctly 1`] = `
<div
  className="MuiBox-root MuiBox-root-21 NatDSSpacing-root-19 NatDSSpacing-root-20"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "marginLeft" prop is provided should render correctly 1`] = `
<div
  className="MuiBox-root MuiBox-root-24 NatDSSpacing-root-22 NatDSSpacing-root-23"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "marginRight" prop is provided should render correctly 1`] = `
<div
  className="MuiBox-root MuiBox-root-27 NatDSSpacing-root-25 NatDSSpacing-root-26"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "marginTop" prop is provided should render correctly 1`] = `
<div
  className="MuiBox-root MuiBox-root-30 NatDSSpacing-root-28 NatDSSpacing-root-29"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "marginX" prop is provided should render correctly 1`] = `
<div
  className="MuiBox-root MuiBox-root-33 NatDSSpacing-root-31 NatDSSpacing-root-32"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "marginY" prop is provided should render correctly 1`] = `
<div
  className="MuiBox-root MuiBox-root-36 NatDSSpacing-root-34 NatDSSpacing-root-35"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "padding" prop is provided should render correctly 1`] = `
<div
  className="MuiBox-root MuiBox-root-18 NatDSSpacing-root-16 NatDSSpacing-root-17"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "paddingBottom" prop is provided should render correctly 1`] = `
<div
  className="MuiBox-root MuiBox-root-39 NatDSSpacing-root-37 NatDSSpacing-root-38"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "paddingLeft" prop is provided should render correctly 1`] = `
<div
  className="MuiBox-root MuiBox-root-42 NatDSSpacing-root-40 NatDSSpacing-root-41"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "paddingRight" prop is provided should render correctly 1`] = `
<div
  className="MuiBox-root MuiBox-root-45 NatDSSpacing-root-43 NatDSSpacing-root-44"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "paddingTop" prop is provided should render correctly 1`] = `
<div
  className="MuiBox-root MuiBox-root-48 NatDSSpacing-root-46 NatDSSpacing-root-47"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "paddingX" prop is provided should render correctly 1`] = `
<div
  className="MuiBox-root MuiBox-root-51 NatDSSpacing-root-49 NatDSSpacing-root-50"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "paddingY" prop is provided should render correctly 1`] = `
<div
  className="MuiBox-root MuiBox-root-54 NatDSSpacing-root-52 NatDSSpacing-root-53"
/>
`;

exports[`Spacing component given a valid default theme is provided when a \`div\` is provided as component should render correctly 1`] = `
<div
  className="MuiBox-root MuiBox-root-9 NatDSSpacing-root-7 NatDSSpacing-root-8"
/>
`;

exports[`Spacing component given a valid default theme is provided when a \`span\` is provided as a component should render correctly 1`] = `
<span
  className="MuiBox-root MuiBox-root-12 NatDSSpacing-root-10 NatDSSpacing-root-11"
/>
`;

exports[`Spacing component given a valid default theme is provided when no props are provided should render correctly 1`] = `
<div
  className="MuiBox-root MuiBox-root-6 NatDSSpacing-root-4 NatDSSpacing-root-5"
/>
`;

exports[`Spacing component given no default theme is provided when no props are provided should render correctly 1`] = `
<div
  className="MuiBox-root MuiBox-root-3 NatDSSpacing-root-1 NatDSSpacing-root-2"
/>
`;
